@@ -2,6 +2,7 @@ Revision history for TAP
 
 {{$NEXT}}
         - Add handlers argument to Source.parse
+        - Remove events and process accessors from Parser
 
 0.3.10  2022-12-23T15:25:22+01:00
         - Make SourceHandler usable as type-object
